--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -31,3 +31,5 @@
     %p.desc.black ¿Ya tienes una cuenta?
     %div.desc.black 
       =link_to "¡Inicia sesión!", new_session_path(resource_name)
+
+  %a.profile-footer(href=root_path) Volver al Menú
