--- a/app/views/profiles/thanks.html.haml
+++ b/app/views/profiles/thanks.html.haml
@@ -5,7 +5,7 @@
       - if @profile.avatar.attached?
         = image_tag url_for(@profile.avatar), alt: 'avatar', class: 'avatar'
       - else
-        = image_tag 'https://www.manufacturingusa.com/sites/prod/files/default.png', alt: 'avatar', class: 'avatar'
+        = image_tag 'ico-blankuser.png', alt: 'avatar', class: 'avatar'
     %div.puser
       %h4 #{@profile.fullname}
       - if @profile.fullname == (nil || "")
@@ -21,7 +21,7 @@
     %div.profile-description
       %div.go-back.to-profile
         %a(href=profiles_path) < Perfil
-    %div.empty-state
+    %div.empty-state.heart
       = image_tag 'bigheart.svg', alt: 'heart', class: 'thanks-heart'
       = image_tag 'coffees2.svg', alt: 'pink girl', class: 'thanks-coffees'
       %h1.thanks-message ¡Gracias!
