--- a/app/assets/stylesheets/profiles.scss
+++ b/app/assets/stylesheets/profiles.scss
@@ -28,6 +28,17 @@
   display: flex;
   flex-direction: column;
   font-family: roboto-regular;
+  &.list {
+    align-content: center;
+    align-self: center;
+    justify-content: center;
+    width: 85%;
+    a {
+      text-decoration: none;
+      color: black;
+    }
+
+  }
   .profile-navbar {
     display: flex;
     flex-direction: row;
@@ -36,7 +47,19 @@
     width: 100%;
     background-color: white;
     z-index: 1;
+    transition: 0.3s;
     filter: drop-shadow(0px 0px 3px rgba(0,0,0,.3));
+    &.list {
+      border-radius: 5px;
+      filter: drop-shadow(0px 0px 2px rgba(0,0,0,.15));
+      &:hover {
+        background-color: #EE4380;
+        color: white;
+        div p {
+          color: white;
+        }
+      }
+    }
     .pavatar {
       width: 100px;
       display: flex;
@@ -79,6 +102,7 @@
     .profile-description {
       padding-left: 25px;
       padding-right: 25px;
+      padding-bottom: 18px;
       font-family: roboto;
     }
   }
@@ -118,7 +142,7 @@
 }
 
 .carousel {
-  margin-top: 18px;
+  // margin-top: 18px;
   text-align: center;
   max-width: 300px;
   min-width: 300px;
@@ -317,5 +341,25 @@ div.centered {
     color: black;
     text-decoration: none;
     font-size: 13.5px;
+  }
+}
+
+.profile-footer {
+  padding-bottom: 12.5px;
+  padding-top: 12.5px;
+  width: 100%;
+  display: flex;
+  text-align: center;
+  flex-direction: column;
+  align-items: center;
+  background-color:  #EE4380;
+  color: white;
+  font-size: 18px;
+  text-decoration: none;
+  z-index: 1;
+  border-style: none;
+  border-width: 0px;
+  &:hover {
+    cursor: pointer;
   }
 }
