--- a/app/views/profiles/show.html.haml
+++ b/app/views/profiles/show.html.haml
@@ -2,10 +2,10 @@
 
   %div.profile-navbar
     %div.pavatar
-      - if @profile.avatar.attached?
+      - if @profile.avatar.attached? && @profile.avatar != (nil || "")
         = image_tag url_for(@profile.avatar), alt: 'avatar', class: 'avatar'
       - else
-        = image_tag 'https://www.manufacturingusa.com/sites/prod/files/default.png', alt: 'avatar', class: 'avatar'
+        = image_tag 'ico-blankuser.png', alt: 'avatar', class: 'avatar'
     %div.puser
       %h4 #{@profile.fullname}
       - if @profile.fullname == (nil || "")
@@ -14,7 +14,7 @@
       - if @profile.role == (nil || "")
         %p Usuari@
     %div.plogo
-      = link_to image_tag( 'logo_temp.svg'), root_path
+      = link_to image_tag( 'logo_temp.svg'), profiles_index_path
 
   %div.profile-content
 
@@ -50,7 +50,7 @@
           -# %a.carousel-control-next{"data-slide" => "next", href: "#carouselExampleIndicators", role: "button"}
           -#   %span.carousel-control-next-icon{"aria-hidden" => "true"}
           -#   %span.sr-only Next
-    - else
+    - elsif @profile.images.last == nil && @profile.bio == (nil || "")
       %h2 Sin contenido para mostrar.
       = image_tag 'ico-brokenheart.svg', alt: 'icoheart', height: '300px', class: "grayfilter"
 
