--- a/app/views/profiles/reward.html.haml
+++ b/app/views/profiles/reward.html.haml
@@ -28,10 +28,10 @@
           - else
             %p Formas de reconocer a #{@name}
     %div.options-container
-      %a.option-card(href=profiles_coffee_path)
+      %a.option-card(href=new_coffee_path)
         = image_tag 'coffee.svg'
         %p Café
-      %a.option-card.minitopmargin(href=profiles_hug_path)
+      %a.option-card.minitopmargin(href=new_hug_path)
         = image_tag 'heart.png'
         %p Abrazo
 
