--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -133,12 +133,20 @@ a {
 }
 
 .footer {
+  display: flex;
+  width: 100%;
   font-size: 25px;
   padding: 25px;
   padding-top: 35px;
   // padding-right: 50px;
   background-color: #EE4380;
   color: #FFFFFF;
+  text-align: center;
+  justify-content: center;
+  align-items: center;
+  *{
+    max-width: 610px;
+  }
   hr {
     padding-top: 10px;
     padding-bottom: 10px;
@@ -147,6 +155,8 @@ a {
 
 .center {
   text-align: center;
+  margin-left: -25px;
+  margin-right: -25px;
 }
 
 .desc {
