Main stuff from version 1.1

--- a/app/assets/stylesheets/my_profile.scss
+++ b/app/assets/stylesheets/my_profile.scss
@@ -168,6 +168,9 @@ div.card, a.card {
       }
     }
   }
+  &.small {
+    width: 50%;
+  }
   .nested-section {
     display: flex;
     &.of-multipliers {
