--- a/app/assets/stylesheets/profiles.scss
+++ b/app/assets/stylesheets/profiles.scss
@@ -65,6 +65,9 @@
       display: flex;
       align-items: center;
       justify-content: center;
+      img {
+        background-color: #EE4380;
+      }
     }
     .puser {
       width: 100%;
