--- a/app/views/my_profile/edit.html.haml
+++ b/app/views/my_profile/edit.html.haml
@@ -33,7 +33,15 @@
         %li
           = link_to image_tag('ico-accounts.svg', alt: 'Icon'), my_profile_accounts_path
           = link_to "Cuentas", my_profile_accounts_path
-
+        %li
+          = link_to image_tag('ico-photo.svg', alt: 'Icon'), my_profile_photo_path
+          = link_to "Foto de Perfil", my_profile_photo_path
+        %li
+          = link_to image_tag('ico-testimonial.svg', alt: 'Icon'), my_profile_testimonials_path
+          = link_to "Testimoniales", my_profile_testimonials_path
+        %li#link
+          = image_tag('ico-link.svg', alt: 'Icon')
+          = link_to "Generar Link", ""
     -# Centro de la Vista --------------------------------------------------------------
     %div.admin-content        
       = form_for @my_profile do |f|
@@ -51,11 +59,15 @@
             %div.card-body
               %h5.card-title Acerca de
               %p.card-text Abrazos y Café es una aplicación que te ayudará a crear una página sin necesidad de conocimientos técnios, donde la gente podrá apoyarte y hacer donaciones.
+          %div.card.transparent
+            %div.card-body
+              %h5.card-title Recuerda:
+              %p.card-text Mantén tu información y tus imágenes concisas, de tal modo que los donadores tengan un acceso fácil.
         %div.info
-          %a.card.hover(href=my_profile_settings_path)
+          %a.card.hover.small(href=my_profile_settings_path)
             %div.card-body
               %h5.card-title Perfil
-              %p.card-text En tu perfil puedes ingresar tus datos básicos, como tu nombre, biografía, monto del café, etc.
+              %p.card-text Guarda tus datos básicos, como tu nombre, biografía, monto del café, etc.
               %div.card-img
                 = image_tag 'ico-profile', alt: '', height: '75px', width: '', class: ''
           %a.card.hover(href=my_profile_images_path)
@@ -70,12 +82,29 @@
               %p.card-text Sincroniza tus cuentas bancarias a tu perfil para recibir las donaciones de tus seguidores.
               %div.card-img
                 = image_tag 'ico-accounts', alt: '', height: '75px', width: '', class: ''
-      %div.separator
+
         %div.info
-          %div.card.transparent
+          %a.card.hover(href=my_profile_photo_path)
             %div.card-body
-              %h5.card-title Recuerda:
-              %p.card-text Mantén tu información y tus imágenes concisas, de tal modo que los donadores tengan un acceso fácil.
+              %h5.card-title Foto de Perfil
+              %p.card-text Añade una foto para que quienes quieran apoyarte puedan reconocerte fácilmente.
+              %div.card-img
+                = image_tag 'ico-photo', alt: '', height: '75px', width: '', class: ''
+          %a.card.hover(href=my_profile_testimonials_path)
+            %div.card-body
+              %h5.card-title Testimoniales
+              %p.card-text Administra los testimoniales que se estén vinculadas a tu perfil.
+              %div.card-img
+                = image_tag 'ico-testimonial', alt: '', height: '75px', width: '', class: ''
+          %div.card.hover.small#link2
+            %div.card-body
+              %h5.card-title Generar Link
+              %p.card-text Cuando tengas todo listo, ¡comparte la URL de tu perfil con tus amigos!
+              %div.card-img
+                = image_tag 'ico-link', alt: '', height: '75px', width: '', class: ''
+
+        %div.separator
+
         -#   -# Si es necesario, se puede poner un botón rosa al lado derecho del header.
         -#   %a.pinkbtn .pinkbtn
         -#   -# Se puede poner un div.separator para generar una pequeña línea horizontal.
@@ -159,3 +188,13 @@
 -#   %div.notice-error
 -#     %ul
 -#       %li #{flash.notice}
+
+:javascript
+  document.addEventListener('turbolinks:load',function () {
+    document.getElementById("link").onclick = function() {
+      alert("¡Copia el siguiente link y compártelo!\n\nhttp://localhost:3000/profiles/#{@my_profile.id}")
+    }
+    document.getElementById("link2").onclick = function() {
+      alert("¡Copia el siguiente link y compártelo!\n\nhttp://localhost:3000/profiles/#{@my_profile.id}")
+    }
+  });
