--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -90,6 +90,16 @@
   }
 }
 
+.alert-pink {
+  margin-top: 5px;
+  font-size: 15px;
+  font-family: roboto; 
+  border-color: #d6e9c6;
+  color: rgb(93, 93, 93);
+  text-align: center; 
+  margin-right: 30px;
+}
+
 br {
   padding: 0px;
 }
