--- a/app/views/profiles/show.html.haml
+++ b/app/views/profiles/show.html.haml
@@ -23,7 +23,7 @@
         -# %a(href=my_profile_images_path) < Atrás
       = raw @profile.bio
 
-    -if @profile.images.last != nil
+    -if @profile.images.where(:show => true).last != nil
       %div.bootstrap
         %div#carouselExampleIndicators.carousel.slide{"data-ride" => "carousel"}
           -# %ol.carousel-indicators
@@ -50,11 +50,11 @@
           -# %a.carousel-control-next{"data-slide" => "next", href: "#carouselExampleIndicators", role: "button"}
           -#   %span.carousel-control-next-icon{"aria-hidden" => "true"}
           -#   %span.sr-only Next
-    - elsif @profile.images.last == nil && @profile.bio == (nil || "")
+    - elsif @profile.images.where(:show => true).last == nil && @profile.bio == (nil || "")
       %h2 Sin contenido para mostrar.
       = image_tag 'ico-brokenheart.svg', alt: 'icoheart', height: '300px', class: "grayfilter"
 
-    -if @profile.testimonials.last != nil
+    -if @profile.testimonials.where(:show => true).last != nil
       %div.bootstrap
         %div#myCarousel.carousel.slide{"data-ride" => "carousel"}
           -# %ol.carousel-indicators
